--- a/test/fixtures/controles.yml
+++ b/test/fixtures/controles.yml
@@ -1,13 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  date: 2012-12-09 00:06:25
-  matiere_id: 1
+  name: MyString
   notemax: 9.99
   description: MyText
+  matiere_id: 1
+  date: 2012-12-12 11:39:50
 
 two:
-  date: 2012-12-09 00:06:25
-  matiere_id: 1
+  name: MyString
   notemax: 9.99
   description: MyText
+  matiere_id: 1
+  date: 2012-12-12 11:39:50
