created model :user, and added annotate
Signed-off-by: Nicolas Dechesne <n-dechesne@ti.com>

--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: students
+#
+#  id         :integer          not null, primary key
+#  lastName   :string(255)
+#  firstName  :string(255)
+#  birth      :datetime
+#  addr       :text
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#  gender     :string(255)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
