--- a/test/fixtures/controles.yml
+++ b/test/fixtures/controles.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: controles
+#
+#  id          :integer          not null, primary key
+#  date        :datetime
+#  matiere_id  :integer
+#  notemax     :decimal(, )
+#  description :text
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#  name        :string(255)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
