--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,10 +1,10 @@
 # == Schema Information
 #
-# Table name: classrooms
+# Table name: users
 #
 #  id         :integer          not null, primary key
+#  email      :string(255)
 #  name       :string(255)
-#  prof       :string(255)
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #
@@ -12,9 +12,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
+  email: MyString
   name: MyString
-  prof: MyString
 
 two:
+  email: MyString
   name: MyString
-  prof: MyString
