improve some models
Signed-off-by: Nicolas Dechesne <n-dechesne@ti.com>

--- a/test/fixtures/matieres.yml
+++ b/test/fixtures/matieres.yml
@@ -2,11 +2,13 @@
 #
 # Table name: matieres
 #
-#  id          :integer          not null, primary key
-#  name        :string(255)
-#  description :text
-#  created_at  :datetime         not null
-#  updated_at  :datetime         not null
+#  id           :integer          not null, primary key
+#  name         :string(255)
+#  description  :text
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#  classroom_id :integer
+#  user_id      :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
